# cmake_template_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.cn.md  README.md
cmake/: 3rdparty.cmake  messagecolor.cmake  toolchain_options.cmake  utils.cmake
conf/: config.h.in
src/: CMakeLists.txt
src/common/: config.h
src/log/: CMakeLists.txt  log.cpp  plog.h
src/main/: main.cpp
src/threadpool/: CMakeLists.txt  thread_manager.cpp  thread_manager.h  thread_types.h
src/utils/: CMakeLists.txt  types.h  utils.h
tests/: CMakeLists.txt  log_test.cpp  main_test.cpp  tests.cpp
