CMAKE_MINIMUM_REQUIRED(VERSION 3.1)


# main
# SET(SRC_MAIN ./main/.cpp)
# FILE(GLOB IN . SRC_MAIN "*.cpp")
AUX_SOURCE_DIRECTORY(${MAIN_DIR} SRC_MAIN)

INCLUDE_DIRECTORIES(
    ./
    ${UTILS_DIR}
    ${COMMON_DIR}
    ${LOG_DIR}
)

# Add here if add some dir code
ADD_SUBDIRECTORY(${UTILS_DIR})
ADD_SUBDIRECTORY(${LOG_DIR})


MESSAGE(STATUS "This is BINARY dir " ${OUT_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})

ADD_EXECUTABLE(main ${SRC_MAIN})
# set output loacl
SET(EXECUTABLE_OUTPUT_PATH ${OUT_BIN_DIR})

# TARGET_LINK_LIBRARIES(main module_xxx)
TARGET_LINK_LIBRARIES(main module_utils)
TARGET_LINK_LIBRARIES(main module_log)


INSTALL(TARGETS main
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin)

