CMAKE_MINIMUM_REQUIRED(VERSION 3.1)


# If need
AUX_SOURCE_DIRECTORY(${LOG_DIR} SRC_LOG)

# If need
INCLUDE_DIRECTORIES(. ${UTILS_DIR})


# TARGET_INCLUDE_DIRECTORIES(module_utils PUBLIC ${UTILS_DIR})

# If need
# Doesn't used at here
LINK_DIRECTORIES(${UTILS_DIR})

ADD_LIBRARY(module_log ${SRC_LOG})

SET(LIBRARY_OUTPUT_PATH ${OUT_STATIC_LIB_DIR})

# TARGET_LINK_LIBRARIES(module_log module_utils)

INSTALL(TARGETS module_log
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin)
