CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

# set utils version
SET(UTILS_VERSION_MAJOR 0  CACHE INTERNAL "UTILS version major")
SET(UTILS_VERSION_MINOR 1  CACHE INTERNAL "UTILS version minor")
SET(UTILS_VERSION_PATCH 0  CACHE INTERNAL "UTILS version patch")

# If need
AUX_SOURCE_DIRECTORY(${UTILS_DIR} SRC_UTILS)

# If need
INCLUDE_DIRECTORIES(.)

# If need
LINK_DIRECTORIES()

ADD_LIBRARY(module_utils STATIC ${SRC_UTILS})

SET(LIBRARY_OUTPUT_PATH ${OUT_STATIC_LIB_DIR})

INSTALL(TARGETS module_utils
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin)
